--- a/restfulWebServices/src/main/resources/application.properties
+++ b/restfulWebServices/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 #logging.level.org.springframework=debug
 management.endpoints.web.exposure.include=*
+spring.security.user.name=furki
+spring.security.user.password=1461
