--- a/restfulWebServices/pom.xml
+++ b/restfulWebServices/pom.xml
@@ -60,11 +60,11 @@
 			<version>2.4.0</version>
 		</dependency>
 		
-		<dependency>
+		<!--  <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
-		
+		</dependency>-->
+			
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
