--- a/restfulWebServices/src/main/resources/application.properties
+++ b/restfulWebServices/src/main/resources/application.properties
@@ -2,3 +2,6 @@
 management.endpoints.web.exposure.include=*
 spring.security.user.name=furki
 spring.security.user.password=1461
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
